Removed api wrapper, update tasksview template
