# server/docs/swagger.yaml
@@ -17,17 +17,6 @@ definitions:
         example: "2025-07-27T20:32:29+03:00"
         type: string
     type: object
-  api.Response:
-    description: Standard API response wrapper
-    properties:
-      data: {}
-      latency:
-        example: 42.123µs
-        type: string
-      timestamp:
-        example: "2025-07-27T20:32:29+03:00"
-        type: string
-    type: object
   dto.CreateTaskRequest:
     properties:
       task:
@@ -180,12 +169,7 @@ paths:
         "200":
           description: Successfully authenticated
           schema:
-            allOf:
-            - $ref: '#/definitions/api.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.LoginResponse'
-              type: object
+            $ref: '#/definitions/dto.LoginResponse'
         "400":
           description: Invalid request format
           schema:
@@ -219,12 +203,7 @@ paths:
         "201":
           description: Successfully registered
           schema:
-            allOf:
-            - $ref: '#/definitions/api.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.RegisterResponse'
-              type: object
+            $ref: '#/definitions/dto.RegisterResponse'
         "400":
           description: 'Invalid request format (code: BAD_REQUEST) or username/email
             already exists (code: DUPLICATE_USER)'
@@ -246,12 +225,7 @@ paths:
         "200":
           description: Server is running
           schema:
-            allOf:
-            - $ref: '#/definitions/api.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.PongResponse'
-              type: object
+            $ref: '#/definitions/dto.PongResponse'
       summary: Server health check
       tags:
       - service
@@ -270,12 +244,7 @@ paths:
         "200":
           description: Profile retrieved successfully
           schema:
-            allOf:
-            - $ref: '#/definitions/api.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.ProfileResponse'
-              type: object
+            $ref: '#/definitions/dto.ProfileResponse'
         "401":
           description: 'Unauthorized (code: UNAUTHORIZED)'
           schema:
@@ -329,12 +298,7 @@ paths:
         "200":
           description: List of tasks
           schema:
-            allOf:
-            - $ref: '#/definitions/api.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.GetAllTasksResponse'
-              type: object
+            $ref: '#/definitions/dto.GetAllTasksResponse'
         "400":
           description: Invalid query parameters
           schema:
@@ -374,12 +338,7 @@ paths:
         "201":
           description: Task successfully created
           schema:
-            allOf:
-            - $ref: '#/definitions/api.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.CreateTaskResponse'
-              type: object
+            $ref: '#/definitions/dto.CreateTaskResponse'
         "400":
           description: Invalid request format
           schema:
@@ -418,12 +377,7 @@ paths:
         "200":
           description: Task details
           schema:
-            allOf:
-            - $ref: '#/definitions/api.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.GetTaskByIDResponse'
-              type: object
+            $ref: '#/definitions/dto.GetTaskByIDResponse'
         "400":
           description: Invalid task ID format
           schema:
