# server/internal/handlers/auth.go
@@ -34,7 +34,7 @@ func InitAuthHandler(userRepo *db.UserRepository) (*AuthHandler, error) {
 // @Accept json
 // @Produce json
 // @Param RegisterRequest body dto.RegisterRequest true "User registration data"
-// @Success 201 {object} api.Response{data=dto.RegisterResponse} "Successfully registered"
+// @Success 201 {object} dto.RegisterResponse "Successfully registered"
 // @Failure 400 {object} api.Error "Invalid request format (code: BAD_REQUEST) or username/email already exists (code: DUPLICATE_USER)"
 // @Failure 500 {object} api.Error "Internal server error (code: INTERNAL_ERROR)
 // @Router /auth/register [post]
@@ -110,7 +110,7 @@ func (h *AuthHandler) Register(c *gin.Context) {
 // @Description Returns "pong" if the server is running
 // @Tags service
 // @Produce json
-// @Success 200 {object} api.Response{data=dto.PongResponse} "Server is running"
+// @Success 200 {object} dto.PongResponse "Server is running"
 // @Router /api/ping [get]
 
 // Login authenticates a user and returns a JWT token
@@ -120,7 +120,7 @@ func (h *AuthHandler) Register(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param   LoginRequest  body  dto.LoginRequest  true  "Login credentials"
-// @Success 200 {object}  api.Response{data=dto.LoginResponse}  "Successfully authenticated"
+// @Success 200 {object}  dto.LoginResponse  "Successfully authenticated"
 // @Failure 400 {object}  api.Error                          "Invalid request format"
 // @Failure 401 {object}  api.Error                          "Invalid credentials"
 // @Failure 500 {object}  api.Error                          "Internal server error"
